--- a/package.json
+++ b/package.json
@@ -14,12 +14,14 @@
     "@mantine/notifications": "^7.13.4",
     "@tabler/icons": "^3.21.0",
     "@tabler/icons-react": "^3.21.0",
+    "express": "^4.21.1",
     "mongodb": "^6.10.0",
     "next": "15.0.2",
     "react": "19.0.0-rc-02c0e824-20241028",
     "react-dom": "19.0.0-rc-02c0e824-20241028"
   },
   "devDependencies": {
+    "@types/express": "^5.0.0",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
@@ -27,6 +29,7 @@
     "eslint-config-next": "15.0.2",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
-    "typescript": "^5"
+    "ts-node": "^10.9.2",
+    "typescript": "^5.6.3"
   }
 }
